--- a/2018_04_19_SP_Global_Time_Series_Deep_Learning/README.Rmd
+++ b/2018_04_19_SP_Global_Time_Series_Deep_Learning/README.Rmd
@@ -7,4 +7,6 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This code accompanies the blog article, "Time Series Deep Learning: Forecasting Sunspots With Keras Stateful LSTM In R", that was presented at S&P Global's headquarters on April 19th, 2018.
+- This slide deck on Time Series Deep Learning was presented at S&P Global's headquarters on April 19th, 2018.
+
+- The presentation accompanies the [Business Science](http://www.business-science.io) blog article, "Time Series Deep Learning: Forecasting Sunspots With Keras Stateful LSTM In R",
