update presentation and readme

--- a/2018_04_19_SP_Global_Time_Series_Deep_Learning/README.Rmd
+++ b/2018_04_19_SP_Global_Time_Series_Deep_Learning/README.Rmd
@@ -9,4 +9,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - This slide deck on Time Series Deep Learning was presented at S&P Global's headquarters on April 19th, 2018.
 
-- The presentation accompanies the [Business Science](http://www.business-science.io) blog article, "Time Series Deep Learning: Forecasting Sunspots With Keras Stateful LSTM In R",
+- The presentation accompanies the [Business Science](http://www.business-science.io) blog article, ["Time Series Deep Learning: Forecasting Sunspots With Keras Stateful LSTM In R"](http://www.business-science.io/timeseries-analysis/2018/04/18/keras-lstm-sunspots-time-series-prediction.html).
+
+```{r, echo=F, fig.align="center", fig.cap="Keras Stateful LSTM: Backtested Predictions"}
+knitr::include_graphics("img/keras_stateful_lstm.png")
+```
+
