--- a/2018_10_13_DSGO18_Business_Science_Problem_Framework/README.Rmd
+++ b/2018_10_13_DSGO18_Business_Science_Problem_Framework/README.Rmd
@@ -39,7 +39,9 @@ You'll walk through an employee turnover problem.
 
 ## Learning More
 
+<a href="https://university.business-science.io/p/hr201-using-machine-learning-h2o-lime-to-predict-employee-turnover">
 <img src="images/slide5.png" width="50%" align="right">
+<a>
 
 Take the course that's transforming data scientists:
 
@@ -50,6 +52,8 @@ Take the course that's transforming data scientists:
 - Learn `R` and `H2O` 
 
 - Get results!
+
+[__Join Data Science For Business With R Now!__](https://university.business-science.io/p/hr201-using-machine-learning-h2o-lime-to-predict-employee-turnover)
 
 
 
