--- a/2018_10_13_DSGO18_Business_Science_Problem_Framework/README.Rmd
+++ b/2018_10_13_DSGO18_Business_Science_Problem_Framework/README.Rmd
@@ -9,20 +9,24 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ___The path to Return-On-Investment with Data Science!___
 
-
+---
 
 ## The Presentation
 
-<img src="images/slide1.png" width="50%" align="right">
+<img src="images/slide1.png" height="150" align="right">
 
 __Ever wonder how to connect data science with the business?__
 
 Then look no further. This presentation covers the essential project management framework that's designed to systematically generate ROI from data science.
 
+---
+
 ## The Agenda
 
 <img src="images/slide2.png" width="100%" align="right">
-<br>
+
+
+---
 
 ## The Problem
 
@@ -35,12 +39,13 @@ You'll walk through an employee turnover problem.
 
 
 <img src="images/slide4.png" width="100%" align="right">
-<br>
+
+---
 
 ## Learning More
 
 <a href="https://university.business-science.io/p/hr201-using-machine-learning-h2o-lime-to-predict-employee-turnover">
-<img src="images/slide5.png" width="50%" align="right">
+<img src="images/slide5.png" width="150" align="right">
 <a>
 
 Take the course that's transforming data scientists:
